# ssobmaetgin

./: .gitignore  README.md
Project/Gin/: .cocos-project.json  CMakeLists.txt
Project/Gin/Classes/: AppDelegate.cpp  AppDelegate.h  Instance.cpp  Instance.h
Project/Gin/Classes/AdapterClientServer/: AdapterClientServer.cpp  AdapterClientServer.h  ClientManager.cpp  ClientManager.h  ServerManager.cpp  ServerManager.h
Project/Gin/Classes/Boards/: ActionConfirmPopup.cpp  ActionConfirmPopup.h  ChangeAvatarPopup.cpp  ChangeAvatarPopup.h  ContinueToPlayConfirmPopup.cpp  ContinueToPlayConfirmPopup.h  DailyBonusPopup.cpp  DailyBonusPopup.h  FightChallengerPopup.cpp  FightChallengerPopup.h  GameCenterPopup.cpp  GameCenterPopup.h  GameResultPopup.cpp  GameResultPopup.h  GetMoneyToPlayPopup.cpp  GetMoneyToPlayPopup.h  InterfacePopupBoard.cpp  InterfacePopupBoard.h  LeaderboardPopup.cpp  LeaderboardPopup.h  LobbyInfoUserBoard.cpp  LobbyInfoUserBoard.h  LobbySettingBoard.cpp  LobbySettingBoard.h  LobbyShopTableBoard.cpp  LobbyShopTableBoard.h  LobbyTicketFlightBoard.cpp  LobbyTicketFlightBoard.h  MailboxContentPopup.cpp  MailboxContentPopup.h  MailboxPopup.cpp  MailboxPopup.h  NewsPopup.cpp  NewsPopup.h  NotifyPopup.cpp  NotifyPopup.h  RatingPopup.cpp  RatingPopup.h  RatingPopupThank.cpp  RatingPopupThank.h  (+12 more)
Project/Gin/Classes/Component/: Avatar.cpp  Avatar.h  DeadwoodBoxNode.cpp  DeadwoodBoxNode.h  DeviceInfo.cpp  DeviceInfo.h  DeviceInfo_android.cpp  DeviceInfo_ios.mm  DeviceInfo_win32.cpp  EndGameResultNode.cpp  EndGameResultNode.h  GinBaseCard.cpp  GinBaseCard.h  GinCardStore.cpp  GinCardStore.h  GinScoreTable.cpp  GinScoreTable.h  GinUserHandNode.cpp  GinUserHandNode.h  JackpotIconNode.cpp  JackpotIconNode.h  LobbyPlace.cpp  LobbyPlace.h  LobbyTableNew.cpp  LobbyTableNew.h  MailboxItem.cpp  MailboxItem.h  MoneyBoxNode.cpp  MoneyBoxNode.h  ResultScoreBoxNode.cpp  ResultScoreBoxNode.h  RuleDetails.cpp  RuleDetails.h  RuleScore.cpp  RuleScore.h  ScoreBoxNode.cpp  ScoreBoxNode.h  TutorialView.cpp  TutorialView.h
Project/Gin/Classes/Define/: GameDefine.cpp  GameDefine.h  InGameDefine.cpp  InGameDefine.h  RemoteConfigDefine.h  ResourcesDefine.h  ServerClientMessageDefine.h  TextDefine.h
Project/Gin/Classes/FirebaseGG/: Firebase.h  Firebase_android.cpp  Firebase_ios.mm  Firebase_win32.cpp  RemoteConfig.cpp  RemoteConfig.h  RemoteConfig_android.cpp  RemoteConfig_ios.mm  RemoteConfig_win32.cpp
Project/Gin/Classes/Helper/: CardIndexConverter.cpp  CardIndexConverter.h  ConsoleTable.cpp  ConsoleTable.h  DebugHelper.cpp  DebugHelper.h  GameUtils.cpp  GameUtils.h  JsonHelper.cpp  JsonHelper.h  LogHelper.cpp  LogHelper.h  StringHelper.cpp  StringHelper.h  VMD5.cpp  VMD5.h
Project/Gin/Classes/Manager/: AdsManager.cpp  AdsManager.h  BoardManager.cpp  BoardManager.h  DownloadManager.cpp  DownloadManager.h  MyActionsManager.cpp  MyActionsManager.h  NotificationManager.cpp  NotificationManager.h  ResourcesManager.cpp  ResourcesManager.h  SceneManager.cpp  SceneManager.h  SoundManager.cpp  SoundManager.h  TextManager.cpp  TextManager.h
Project/Gin/Classes/Native/: CallToOtherLanguage.cpp  CallToOtherLanguage.h  CallToOtherLanguage_IOS.mm  CallToOtherLanguage_MAC.mm  NativeCallBack.cpp  NativeCallBack.h  NativeCallBackIOS.h  NativeCallBackIOS.mm  NativeCallBackJava.cpp  NativeCallBackJava.h
Project/Gin/Classes/Network/: MessageHandler.cpp  MessageHandler.h  MessageSender.cpp  MessageSender.h
Project/Gin/Classes/Scenes/: CheatCardLayer.cpp  CheatCardLayer.h  DebugLayer.cpp  DebugLayer.h  InterfaceScene.cpp  InterfaceScene.h  LoadingLayer.cpp  LoadingLayer.h  LobbyScene.cpp  LobbyScene.h  SplashScene.cpp  SplashScene.h
Project/Gin/Classes/Scenes/Gin/: GPGinControlCardLayer.cpp  GPGinControlCardLayer.h  GPGinDealCardLayer.cpp  GPGinDealCardLayer.h  GPGinEffect.cpp  GPGinEffect.h  GPGinInterfaceLayer.cpp  GPGinInterfaceLayer.h  GPGinScene.cpp  GPGinScene.h  GPGinSlotManager.cpp  GPGinSlotManager.h  GPGinUserSlotNode.cpp  GPGinUserSlotNode.h  GinCard.cpp  GinCard.h  GinSlotInfo.cpp  GinSlotInfo.h
Project/Gin/Classes/ServerOffline/: GinGameMatchManager.cpp  GinGameMatchManager.h  HandCard.cpp  HandCard.h  InGameServerOfflineDefines.h  ServerOffline.cpp  ServerOffline.h  ServerOfflineDefines.h  SvrBotHelper.cpp  SvrBotHelper.h  SvrCard.cpp  SvrCard.h  SvrHelper.cpp  SvrHelper.h  SvrUserProfile.cpp  SvrUserProfile.h
Project/Gin/Classes/ServerOffline/Bot/: BotConfig.cpp  BotConfig.h  BotConstant.h  BotHelper.cpp  BotHelper.h  BotLogger.cpp  BotLogger.h  BotOpponentHandEstimation.cpp  BotOpponentHandEstimation.h
Project/Gin/Classes/UserData/: UserData.cpp  UserData.h
Project/Gin/Data/LocalizeData/: LocalizeText.xls
Project/Gin/Resources/: bot_conf_level.json  card_define.json  event_decor_data.json  list_bet.json  list_bot_data.json  list_cities.json  list_condition_rating.json  list_mailboxs.json  list_notifications.json  list_tables.json  list_target_score.json  localize.json  money_range_data.json  news.json  video_reward_data.json  video_reward_master_data.json  video_reward_user_data.json
Project/Gin/Resources/data/: list_games_data.json
Project/Gin/Resources/data_ios/: list_games_data.json
Project/Gin/cocos2d/docs/: doxygen.config  doxygen_white_book.config
Project/Gin/proj.android/: build.gradle  gradle.properties  settings.gradle
Project/Gin/proj.android/app/: AndroidManifest.xml  build.gradle  google-services.json  proguard-rules.pro
Project/Gin/proj.ios_mac/: Podfile
Project/Gin/proj.ios_mac/GinOffline.xcodeproj/: project.pbxproj
Project/Gin/proj.ios_mac/ios/: AppController.h  AppController.mm  AppDefine.h  DeviceInfoIOS.h  DeviceInfoIOS.mm  FirebaseAnalyticsController.h  FirebaseAnalyticsController.m  FirebaseNotification.h  FirebaseNotification.m  FirebaseRC.h  FirebaseRC.m  GoogleService-Info.plist  Info.plist  NotificationUtils.h  NotificationUtils.m  PlayGameService.h  PlayGameService.mm  Reachability.h  Reachability.m  RootViewController.mm  StoreService.h  StoreService.mm
Project/Gin/proj.ios_mac/mac/: Icon.icns  Info.plist  Storyboard.storyboard
(+224 files in other folders)
